test/parser/Queries/syntax_errors/fail_K-ForExprWithout-19.xq
 ne (:*********foo*** ne *** where ** ne ********* $ *** for ****** for *********** where ****foo****:)
(:  K-ForExprWithout-19        foo               $   ne      :)foo
(: Written by: Frans Englich     ne             let     $           for  :)
(:                      $    :
(: Purpose: A for variable binding to the empty $  sequence. :) where (:************ let ***foo**** $ *******foo*** for ******* $ ************** where ****:)
empty(for $var in () return ne  1)